# kera

./: .gitignore  CHANGELOG.md  README.md  TODO.txt  ftf.py  justfile  malline.py  pandoc.yml  pyproject.toml
.github/workflows/: static.yml
doc/: index.html  source.md
doc/changelog/: index.html
dsl/: example.plate  grammer.tx  main.py
examples/html/: beatrice.json  maribu.yml  profile.html  scofflaw.yml
examples/sql/: get.sql  init.sql  person.yml  place.yml
par/: columns.yml  columns_select_columns.sql  lusaka.yml  lusaka_profile.html  profile.html  scofflaw.yml  scofflaw_profile.html  select.sql  select_columns.sql  simple_document.typ  simple_metadata.json  simple_metadata_simple_document.typ  styles.css  table.yml  table_select.sql
src/: ftf.py  kera.py
