[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ftf"
version = "1.0.0"
authors = [{name = "Carston Wiebe", email = "ctwiebe23@gmail.com"}]
description = "Fill template files with structured data"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Home = "https://carston.zip/ftf"
Github = "https://github.com/ctwiebe23/ftf"

[project.scripts]
ftf = "ftf:main"
